tests/regression/error/hw4_error27.nex
var a;
var b;
var c;
var a;

print a;
